--- a/src/lib/template/0_base.tmpl
+++ b/src/lib/template/0_base.tmpl
@@ -98,6 +98,12 @@
 <input type="hidden" id="sitePathPrefix" value="<%= sitePathPrefix %>" />
 <% end template %>
 
+<% template settingsTexts() %>
+<input type="hidden" id="showPasswordText" value="<%= showPasswordText %>" />
+<input type="hidden" id="cancelButtonText" value="<%= cancelButtonText %>" />
+<input type="hidden" id="confirmButtonText" value="<%= confirmButtonText %>" />
+<% end template %>
+
 <% template baseHead() %>
 <title><%= pageTitle %></title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -107,6 +113,7 @@
 
 <% template settingsHead() %>
 <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/settings_bar.css">
+<script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/picoModal-2.1.0.min.js"></script>
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/sha1.js"></script>
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/settings.js"></script>
 <% end template %>
