--- a/src/lib/template/board.tmpl
+++ b/src/lib/template/board.tmpl
@@ -167,6 +167,7 @@
     </head>
     <body onload="javascript:initializeOnLoadBoard();">
         <% include baseTexts() %>
+        <% include settingsTexts() %>
         <% include boardTexts() %>
         <% include settings() %>
         <br />
