--- a/src/lib/template/home.tmpl
+++ b/src/lib/template/home.tmpl
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/home.css">
     </head>
     <body>
+        <% include settingsTexts() %>
         <% include settings() %>
         <br />
         <% include navbar() %>
