--- a/src/lib/template/thread.tmpl
+++ b/src/lib/template/thread.tmpl
@@ -98,6 +98,7 @@
     </head>
     <body onload="javascript:initializeOnLoadThread();">
         <% include baseTexts() %>
+        <% include settingsTexts() %>
         <% include boardTexts() %>
         <% include settings() %>
         <br />
