Add ability to be logged in but post without a tripcode

--- a/src/lib/template/board.tmpl
+++ b/src/lib/template/board.tmpl
@@ -16,7 +16,7 @@
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
         <b><%= post.subject %></b>
-        <% if ( post.showRegistered ) %>
+        <% if ( post.showRegistered && post.showTripcode ) %>
             <img src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>">
         <% end %>
         <% if ( !post.email.empty() ) %>
@@ -24,7 +24,7 @@
         <% else %>
             <%= post.name | raw %>
         <% end %>
-        <% if ( post.showRegistered && !post.tripcode.empty() ) %>
+        <% if ( post.showRegistered && !post.tripcode.empty() && post.showTripcode ) %>
             <span class="tripcode"><%= post.tripcode %></span>
         <% end %>
         <%= post.dateTime %>
@@ -165,7 +165,7 @@
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/board.css">
         <script type="text/javascript" src="/<%= sitePathPrefix %>js/board.js"></script>
     </head>
-    <body onload="javascript:initializeOnLoadBoard();">
+    <body onload="javascript:initializeOnLoadSettings(); initializeOnLoadBoard();">
         <% include baseTexts() %>
         <% include settingsTexts() %>
         <% include boardTexts() %>
