--- a/src/lib/template/0_base.tmpl
+++ b/src/lib/template/0_base.tmpl
@@ -36,6 +36,8 @@
         <%= loginLabelText %>
         <% if ( content.loggedIn ) %>
             <button class="button" onclick="javascript:doLogout();"><%= loginButtonText %></button>
+            <input id="showTripcodeCheckbox" type="checkbox" class="checkbox" title="<%= showTripcodeText %>"
+                   onclick="javascript:switchShowTripcode();" name="showTripcode" />
         <% else %>
             <input id="loginInput" type="password" class="input" name="hashpass"
                    placeholder="<%= loginPlaceholderText %>" />
