--- a/src/lib/template/thread.tmpl
+++ b/src/lib/template/thread.tmpl
@@ -17,7 +17,7 @@
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
         <b><%= post.subject %></b>
-        <% if ( post.showRegistered ) %>
+        <% if ( post.showRegistered && post.showTripcode ) %>
             <img src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>">
         <% end %>
         <% if ( !post.email.empty() ) %>
@@ -25,7 +25,7 @@
         <% else %>
             <%= post.name | raw %>
         <% end %>
-        <% if ( post.showRegistered && !post.tripcode.empty() ) %>
+        <% if ( post.showRegistered && !post.tripcode.empty() && post.showTripcode ) %>
             <span class="tripcode"><%= post.tripcode %></span>
         <% end %>
         <%= post.dateTime %>
@@ -96,7 +96,7 @@
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/thread.css">
         <script type="text/javascript" src="/<%= sitePathPrefix %>js/thread.js"></script>
     </head>
-    <body onload="javascript:initializeOnLoadThread();">
+    <body onload="javascript:initializeOnLoadSettings(); initializeOnLoadThread();">
         <% include baseTexts() %>
         <% include settingsTexts() %>
         <% include boardTexts() %>
