--- a/src/lib/template/thread.tmpl
+++ b/src/lib/template/thread.tmpl
@@ -58,6 +58,10 @@
                     <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closeThreadText %>" /></a>
             <% end %>
         <% end %>
+        <% if ( content.moder ) %>
+            <a href="javascript:banUser('<%= currentBoard.name %>', '<%= post.number %>');">
+                <img src="/<%= sitePathPrefix %>img/ban.png" title="<%= banUserText %>" /></a>
+        <% end %>
         <a href="javascript:deletePost('<%= currentBoard.name %>', '<%= post.number %>', true);">
         <% if ( op ) %>
             <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= deleteThreadText %>" /></a>
