--- a/src/lib/template/1_base_board.tmpl
+++ b/src/lib/template/1_base_board.tmpl
@@ -121,6 +121,7 @@
 <% end template %>
 
 <% template boardTexts() %>
+<input type="hidden" id="showHidePostText" value="<%= showHidePostText %>" />
 <input type="hidden" id="banUserText" value="<%= banUserText %>" />
 <input type="hidden" id="boardLabelText" value="<%= boardLabelText %>" />
 <input type="hidden" id="banLevelLabelText" value="<%= banLevelLabelText %>" />
