Implement captcha quota

--- a/src/lib/ololord_static_css.qrc
+++ b/src/lib/ololord_static_css.qrc
@@ -18,5 +18,6 @@
         <file>static/css/search_action.css</file>
         <file>static/css/create_action.css</file>
         <file>static/css/ip_ban.css</file>
+        <file>static/css/create_action_pr.css</file>
     </qresource>
 </RCC>
