--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -243,5 +243,6 @@
         <file>static/img/flag/ZW.png</file>
         <file>static/img/ban.png</file>
         <file>static/img/hide.png</file>
+        <file>static/img/webm_logo.png</file>
     </qresource>
 </RCC>
