--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -244,5 +244,6 @@
         <file>static/img/ban.png</file>
         <file>static/img/hide.png</file>
         <file>static/img/webm_logo.png</file>
+        <file>static/img/edit.png</file>
     </qresource>
 </RCC>
