--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -59,6 +59,10 @@
                 #<a href="#<%= post.number %>"><%= post.number %></a>
             <% end %>
         <% end %>
+        <% if ( content.moder ) %>
+            <a href="javascript:editPost('<%= currentBoard.name %>', '<%= post.number %>');">
+                <img src="/<%= sitePathPrefix %>img/edit.png" title="<%= editPostText %>" /></a>
+        <% end %>
         <% if ( content.moder && op ) %>
             <% if ( content.fixed ) %>
                 <a href="javascript:setThreadFixed('<%= currentBoard.name %>', '<%= post.number %>', false);">
@@ -116,7 +120,7 @@
                     <% end %>
                 <% end %>
                 <td class="postText">
-                    <blockquote><%= post.text | raw %></blockquote>
+                    <blockquote id="post<%= post.number %>Text"><%= post.text | raw %></blockquote>
                 </td>
             </tr>
             <tr>
