--- a/src/lib/static/css/board.css
+++ b/src/lib/static/css/board.css
@@ -1,8 +1,9 @@
 blockquote {
     margin-top: 5px;
     margin-left: 10px;
-    overflow: auto;
-    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: visible;
+    max-height: 300px;
     max-width: 2000px;
 }
 
