Improve /mlp/ board

--- a/src/lib/ololord_static_css.qrc
+++ b/src/lib/ololord_static_css.qrc
@@ -19,5 +19,6 @@
         <file>static/css/create_action.css</file>
         <file>static/css/ip_ban.css</file>
         <file>static/css/create_action_pr.css</file>
+        <file>static/css/board_mlp.css</file>
     </qresource>
 </RCC>
