--- a/src/lib/ololord_static_js.qrc
+++ b/src/lib/ololord_static_js.qrc
@@ -8,5 +8,6 @@
         <file>static/js/search_action.js</file>
         <file>static/js/post.js</file>
         <file>static/js/3rdparty/picoModal-2.1.0.min.js</file>
+        <file>static/js/board_mlp.js</file>
     </qresource>
 </RCC>
