--- a/src/lib/ololord_static_video.qrc
+++ b/src/lib/ololord_static_video.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>static/video/friendship_is_magic_1.webm</file>
         <file>static/video/friendship_is_magic_2.webm</file>
+        <file>static/video/bombanoolow.webm</file>
     </qresource>
 </RCC>
