--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -37,10 +37,10 @@
         <% end %>
         <% if ( content.showWhois && !post.flagName.empty() ) %>
             <% if ( !post.cityName.empty() ) %>
-                <img src="/<%= sitePathPrefix %>/img/flag/<%= post.flagName %>"
+                <img src="/<%= sitePathPrefix %>img/flag/<%= post.flagName %>"
                      title="<%= post.countryName %>: <%= post.cityName %>">
             <% else %>
-                <img src="/<%= sitePathPrefix %>/img/flag/<%= post.flagName %>" title="<%= post.countryName %>">
+                <img src="/<%= sitePathPrefix %>img/flag/<%= post.flagName %>" title="<%= post.countryName %>">
             <% end %>
         <% end %>
         <%= post.dateTime %>
