--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -16,6 +16,16 @@
 <% end %>
 <% end template %>
 
+<% template navigationButton(std::string target) %>
+<% if ( "top" == target ) %>
+    <a class="navigationButton navigationButtonBottom" title="<%= toTopText %>"
+       href="#top"><img src="/<%= sitePathPrefix %>img/up.png"></a>
+<% elif ( "bottom" == target ) %>
+    <a class="navigationButton navigationButtonTop" title="<%= toBottomText %>"
+       href="#bottom"><img src="/<%= sitePathPrefix %>img/down.png"></a>
+<% end %>
+<% end template %>
+
 <% template createAction(std::string position) %>
 <% if ( content.postingEnabled ) %>
     <div class="createAction">
