--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -245,5 +245,7 @@
         <file>static/img/hide.png</file>
         <file>static/img/webm_logo.png</file>
         <file>static/img/edit.png</file>
+        <file>static/img/down.png</file>
+        <file>static/img/up.png</file>
     </qresource>
 </RCC>
