--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -23,7 +23,11 @@
         <% if ( post.number == thread.opPost.number && thread.closed ) %>
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
-        <b><%= post.subject %></b>
+        <% if ( post.subjectAlwaysRaw ) %>
+            <%= post.subject | raw %>
+        <% else %>
+            <b><%= post.subject %></b>
+        <% end %>
         <% if ( post.showRegistered && post.showTripcode ) %>
             <img src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>">
         <% end %>
