--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -24,7 +24,11 @@
         <% if ( op && content.closed ) %>
             <img src="/<%= sitePathPrefix %>img/closed.png" title="<%= closedText %>">
         <% end %>
-        <b><%= post.subject %></b>
+        <% if ( post.subjectAlwaysRaw ) %>
+            <%= post.subject | raw %>
+        <% else %>
+            <b><%= post.subject %></b>
+        <% end %>
         <% if ( post.showRegistered && post.showTripcode ) %>
             <img src="/<%= sitePathPrefix %>img/registered.png" title="<%= registeredText %>">
         <% end %>
